src/test/deca/context/invalid/operation-binaire-superieur-egal-wrong.deca
// Description:
//    Test 3.33 fail avec supérieur ou égal
//
// Resultats:
//    Ligne 11: Supérieur ou égal ne s'utilise qu'avec des int ou des float.
//
// Historique:
//    cree le 06/01/2023

{
    1 >= "hello world";
}